# jarvis

./: .gitignore  @fix_plan.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  PROMPT.md  README.md  README.zh-CN.md  REQUIREMENTS.md  package-lock.json  package.json
.claude/: CLAUDE.md
config/: config.example.json  key.example.json
logs/security/: .security-key
native/windows/: notif-watch.ps1  uia-query.ps1
overlay-ui/: index.html  package-lock.json  package.json  tsconfig.json
overlay-ui/src/: App.tsx  main.ts  styles.css
overlay-ui/src-tauri/: Cargo.toml  tauri.conf.json
overlay-ui/src-tauri/capabilities/: default.json
overlay-ui/src-tauri/src/: lib.rs  main.rs
overlay-ui/src-tauri/src/liquid_glass/: linux.rs  macos.rs  mod.rs  windows.rs
prompts/: merge.md  platform-linux.md  system-native.md  system.md  user.md  verify.md
prompts/platform/: macos.md  windows.md
prompts/tools/: native.md  text.md
skills/browser/: SKILL.md
skills/platform-linux/: SKILL.md
skills/platform-macos/: SKILL.md
skills/platform-windows/: SKILL.md
skills/powerpoint/: SKILL.md  powerpoint-macos.md  powerpoint-windows.md
skills/search/: SKILL.md
skills/wechat/: SKILL.md
src/: index.ts  types.ts
src/accessibility/: index.ts  types.ts
src/agent/: Agent.ts
src/cli/: main.ts
src/llm/: anthropic.ts  base.ts  doubao.ts  index.ts  openai.ts
src/message/: imap.ts  (+6 more)
test/: accessibility.test.ts  ax-diff-live.ts  ax-snapshot.test.ts  state-diff.test.ts
workspace/: moltbook_info_1.md  moltbook_info_2.md  moltbook_info_3.md  moltbook_xinhua.md  moltbook_zhihu.md
(+42 files in other folders)
