[package]
name = "jarvis-overlay"
version = "0.1.0"
description = "Jarvis Agent Overlay UI"
authors = ["Ninot"]
edition = "2021"

[lib]
name = "jarvis_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux uses compositor settings, no extra deps needed
